--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "sumeet",
   "main": "app.js",
   "scripts": {
-    "test": "test",
+    "test": "jest --config ./jest.config.json",
     "dev": "nodemon app.js",
     "start": "node app.js"
   },
@@ -25,5 +25,8 @@
     "mongoose": "^5.11.0",
     "nodemon": "^2.0.6",
     "validator": "^13.5.1"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
