--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "test",
-    "dev" :"nodemon views/app.js",
+    "dev": "nodemon views/app.js,html",
     "start": "node app.js"
   },
   "repository": {
@@ -19,8 +19,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mongoose": "^5.11.0",
     "nodemon": "^2.0.6",
     "validator": "^13.5.1"
