--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "express-session": "^1.17.1",
     "mongoose": "^5.11.0",
     "nodemon": "^2.0.6",
+    "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
     "validator": "^13.5.1"
   },
   "devDependencies": {
