--- a/package.json
+++ b/package.json
@@ -21,13 +21,18 @@
     "body-parser": "^1.19.0",
     "config": "^3.3.3",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "js-yaml": "^3.14.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.0",
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
+    "swagger-jsdoc": "^6.0.0-rc.3",
+    "swagger-ui-express": "^4.1.5",
     "validator": "^13.5.1"
   },
   "devDependencies": {
