--- a/package.json
+++ b/package.json
@@ -1,37 +1,37 @@
 {
-  "name": "yakshayush-app",
-  "version": "1.0.0",
-  "description": "sumeet",
-  "main": "app.js",
-  "scripts": {
-    "test": "jest --config ./jest.config.json",
-    "dev": "nodemon app.js",
-    "start": "node app.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "no"
-  },
-  "keywords": [
-    "node"
-  ],
-  "author": "sumeet",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "bootstrap": "^5.0.0-alpha1",
-    "config": "^3.3.3",
-    "ejs": "^3.1.5",
-    "express": "^4.17.1",
-    "express-rate-limit": "^5.2.3",
-    "jquery": "^3.5.1",
-    "mongoose": "^5.11.0",
-    "nodemon": "^2.0.6",
-    "popper.js": "^1.16.1",
-    "validator": "^13.5.1"
-  },
-  "devDependencies": {
-    "helmet": "^4.2.0",
-    "jest": "^26.6.3"
-  }
+    "name": "yakshayush-app",
+    "version": "1.0.0",
+    "description": "sumeet",
+    "main": "app.js",
+    "scripts": {
+        "test": "jest --config ./jest.config.json",
+        "dev": "nodemon app.js",
+        "start": "node app.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "no"
+    },
+    "keywords": [
+        "node"
+    ],
+    "author": "sumeet",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "^1.19.0",
+        "bootstrap": "^5.0.0-beta1",
+        "config": "^3.3.3",
+        "ejs": "^3.1.5",
+        "express": "^4.17.1",
+        "express-rate-limit": "^5.2.3",
+        "jquery": "^3.5.1",
+        "mongoose": "^5.11.0",
+        "nodemon": "^2.0.6",
+        "popper.js": "^1.16.1",
+        "validator": "^13.5.1"
+    },
+    "devDependencies": {
+        "helmet": "^4.2.0",
+        "jest": "^26.6.3"
+    }
 }
