--- a/package.json
+++ b/package.json
@@ -40,8 +40,9 @@
     "@shelf/jest-mongodb": "^1.2.3",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
-    "config": "^3.3.3",
     "bootstrap": "^5.0.0-beta1",
+    "bson-objectid": "^1.3.1",
+    "config": "^3.3.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "ejs": "^3.1.5",
@@ -49,18 +50,15 @@
     "express-session": "^1.17.1",
     "jest": "^26.6.3",
     "jest-stare": "^2.2.0",
+    "jquery": "^3.5.1",
     "js-yaml": "^3.14.1",
     "jsonwebtoken": "^8.5.1",
-    "jquery": "^3.5.1",
-    "mongoose": "^5.11.0",
+    "mongoose": "^5.11.8",
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
-    "supertest": "^6.0.1",
-    "swagger-jsdoc": "^6.0.0-rc.3",
-    "swagger-ui-express": "^4.1.5",
-    "validator": "^13.5.1"
     "popper.js": "^1.16.1",
+    "supertest": "^6.0.1",
     "swagger-jsdoc": "^6.0.0-rc.3",
     "swagger-ui-express": "^4.1.5",
     "validator": "^13.5.1"
