--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   },
   "devDependencies": {
     "helmet": "^4.2.0",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "mongodb-memory-server": "^6.9.3"
   }
 }
