--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@jest/test-sequencer": "^26.6.3",
     "@shelf/jest-mongodb": "^1.2.3",
+    "accesscontrol": "^2.2.1",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.0.0-beta1",
